--- a/mandelbulber2/formula/ui/mandelbulb_sin_cos_v4.ui
+++ b/mandelbulber2/formula/ui/mandelbulb_sin_cos_v4.ui
@@ -373,7 +373,7 @@ scales</string>
       <item>
        <widget class="QLabel" name="label_18">
         <property name="text">
-         <string notr="true">sign() * (abs() + offset)</string>
+         <string notr="true">sign() * (offset - abs()  )</string>
         </property>
        </widget>
       </item>
