--- a/mandelbulber2/formula/ui/xenodreambuie_v3.ui
+++ b/mandelbulber2/formula/ui/xenodreambuie_v3.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>790</width>
-    <height>1319</height>
+    <height>1564</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -566,6 +566,9 @@
      </item>
      <item>
       <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_Y">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -592,6 +595,9 @@
      </item>
      <item>
       <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_Y">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
          <horstretch>0</horstretch>
